--- a/Copioni.CorriereSpettacolo/Base.lproj/Main.storyboard
+++ b/Copioni.CorriereSpettacolo/Base.lproj/Main.storyboard
@@ -30,26 +30,26 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.86744034290313721" green="0.33674836158752441" blue="0.33686351776123047" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="br4-yw-Grm" secondAttribute="trailing" id="DYX-qT-6Uf"/>
-                                    <constraint firstAttribute="height" constant="86" id="FMU-Xz-b4b">
-                                        <variation key="heightClass=regular-widthClass=regular" constant="95"/>
-                                    </constraint>
-                                    <constraint firstItem="br4-yw-Grm" firstAttribute="leading" secondItem="8qp-lV-JgV" secondAttribute="leading" id="GKG-Um-XhF"/>
-                                    <constraint firstItem="br4-yw-Grm" firstAttribute="top" secondItem="8qp-lV-JgV" secondAttribute="top" constant="20" id="PcI-j4-lU0"/>
-                                    <constraint firstAttribute="bottom" secondItem="br4-yw-Grm" secondAttribute="bottom" constant="8" id="ucO-Nw-2sd"/>
+                                    <constraint firstItem="br4-yw-Grm" firstAttribute="leading" secondItem="8qp-lV-JgV" secondAttribute="leading" id="70u-U5-UwZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="br4-yw-Grm" secondAttribute="trailing" id="8Pt-3j-f4S"/>
+                                    <constraint firstItem="br4-yw-Grm" firstAttribute="bottom" secondItem="8qp-lV-JgV" secondAttribute="bottomMargin" id="ZLd-ce-CCq"/>
+                                    <constraint firstItem="br4-yw-Grm" firstAttribute="top" secondItem="8qp-lV-JgV" secondAttribute="top" constant="20" id="aRg-Ts-D2Y"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SJq-or-KKV" userLabel="SubHeader">
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iy9-Rk-pJZ">
-                                        <state key="normal" title="Copioni Recenti"/>
+                                        <fontDescription key="fontDescription" name="MavenProMedium" family="Maven Pro" pointSize="17"/>
+                                        <state key="normal" title="Copioni Recenti">
+                                            <color key="titleColor" red="0.86744034290000005" green="0.33674836159999999" blue="0.33686351780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.21500873565673828" green="0.23484137654304504" blue="0.26396262645721436" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="iy9-Rk-pJZ" firstAttribute="centerX" secondItem="SJq-or-KKV" secondAttribute="centerX" id="BQq-YK-I23"/>
-                                    <constraint firstItem="iy9-Rk-pJZ" firstAttribute="centerY" secondItem="SJq-or-KKV" secondAttribute="centerY" id="BeF-T2-bLk"/>
-                                    <constraint firstAttribute="height" constant="39" id="QxE-V8-WeB"/>
+                                    <constraint firstItem="iy9-Rk-pJZ" firstAttribute="centerX" secondItem="SJq-or-KKV" secondAttribute="centerX" id="GJ5-Wf-7ac"/>
+                                    <constraint firstItem="iy9-Rk-pJZ" firstAttribute="top" secondItem="SJq-or-KKV" secondAttribute="top" constant="5" id="ep0-Z3-AZc"/>
+                                    <constraint firstItem="iy9-Rk-pJZ" firstAttribute="centerY" secondItem="SJq-or-KKV" secondAttribute="centerY" id="pm1-qp-fMP"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="56" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="zX1-bj-6fA" userLabel="Elenco Copioni">
@@ -86,15 +86,17 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="6MX-Jg-Keq" firstAttribute="top" secondItem="6nm-pY-iez" secondAttribute="topMargin" id="0wF-Hq-wbK"/>
                                                 <constraint firstItem="6MX-Jg-Keq" firstAttribute="trailing" secondItem="6nm-pY-iez" secondAttribute="trailingMargin" id="2OQ-Y3-1vx"/>
                                                 <constraint firstAttribute="bottom" secondItem="hVn-ax-9XR" secondAttribute="bottom" constant="8" id="42V-Tk-qnc"/>
                                                 <constraint firstAttribute="bottom" secondItem="3Zy-W4-6X2" secondAttribute="bottom" constant="8" id="D7K-F8-b5B"/>
                                                 <constraint firstItem="3Zy-W4-6X2" firstAttribute="leading" secondItem="6nm-pY-iez" secondAttribute="leading" constant="8" id="EOG-6F-zYy"/>
                                                 <constraint firstItem="6MX-Jg-Keq" firstAttribute="leading" secondItem="3Zy-W4-6X2" secondAttribute="trailing" constant="19" id="UuE-Uq-zMW"/>
+                                                <constraint firstItem="3Zy-W4-6X2" firstAttribute="bottom" secondItem="hVn-ax-9XR" secondAttribute="bottom" id="dM6-PP-1gR"/>
+                                                <constraint firstItem="3Zy-W4-6X2" firstAttribute="top" secondItem="6MX-Jg-Keq" secondAttribute="top" id="nd6-kV-4ma"/>
                                                 <constraint firstItem="3Zy-W4-6X2" firstAttribute="top" secondItem="6nm-pY-iez" secondAttribute="top" constant="8" id="qMM-dU-xTZ"/>
                                                 <constraint firstAttribute="trailing" secondItem="hVn-ax-9XR" secondAttribute="trailing" id="tmR-ad-t8H"/>
                                                 <constraint firstItem="hVn-ax-9XR" firstAttribute="leading" secondItem="3Zy-W4-6X2" secondAttribute="trailing" constant="19" id="yVf-kO-buO"/>
+                                                <constraint firstItem="6MX-Jg-Keq" firstAttribute="trailing" secondItem="6nm-pY-iez" secondAttribute="trailingMargin" id="zcb-tt-JBH"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -106,27 +108,25 @@
                                 </prototypes>
                             </tableView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="xcr-EP-vva">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="che-DD-JSz"/>
-                                </constraints>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="xcr-EP-vva" firstAttribute="top" secondItem="SJq-or-KKV" secondAttribute="bottom" id="0IS-an-8Qp"/>
-                            <constraint firstItem="8qp-lV-JgV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="8SS-hW-iva"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="zX1-bj-6fA" secondAttribute="bottom" id="B3A-1d-T9R"/>
-                            <constraint firstAttribute="trailing" secondItem="xcr-EP-vva" secondAttribute="trailing" id="C5d-UG-lHe"/>
-                            <constraint firstItem="SJq-or-KKV" firstAttribute="top" secondItem="8qp-lV-JgV" secondAttribute="bottom" id="J81-iW-v9H"/>
-                            <constraint firstItem="zX1-bj-6fA" firstAttribute="top" secondItem="xcr-EP-vva" secondAttribute="bottom" id="R3i-46-8j2"/>
-                            <constraint firstItem="zX1-bj-6fA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="a7d-XJ-7vV"/>
-                            <constraint firstItem="8qp-lV-JgV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="b7h-c4-z48"/>
-                            <constraint firstAttribute="trailing" secondItem="SJq-or-KKV" secondAttribute="trailing" id="bv2-jl-CyI"/>
-                            <constraint firstAttribute="trailing" secondItem="zX1-bj-6fA" secondAttribute="trailing" id="caY-6P-X9x"/>
-                            <constraint firstItem="xcr-EP-vva" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="lCk-QR-T0x"/>
-                            <constraint firstAttribute="trailing" secondItem="8qp-lV-JgV" secondAttribute="trailing" id="mVJ-Mw-4rZ"/>
-                            <constraint firstItem="SJq-or-KKV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pYk-WD-OdM"/>
+                            <constraint firstItem="8qp-lV-JgV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="1F9-do-A9u"/>
+                            <constraint firstItem="SJq-or-KKV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="86" id="9ui-x4-5XA"/>
+                            <constraint firstItem="zX1-bj-6fA" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="FSL-2I-54C"/>
+                            <constraint firstItem="zX1-bj-6fA" firstAttribute="top" secondItem="xcr-EP-vva" secondAttribute="bottom" id="Fce-Dp-tC0"/>
+                            <constraint firstItem="SJq-or-KKV" firstAttribute="leading" secondItem="xcr-EP-vva" secondAttribute="leading" id="I8u-Aa-qip"/>
+                            <constraint firstItem="SJq-or-KKV" firstAttribute="top" secondItem="8qp-lV-JgV" secondAttribute="bottom" id="Icr-8r-NWB"/>
+                            <constraint firstItem="xcr-EP-vva" firstAttribute="top" secondItem="SJq-or-KKV" secondAttribute="bottom" id="P2I-FE-9jy"/>
+                            <constraint firstItem="8qp-lV-JgV" firstAttribute="trailing" secondItem="SJq-or-KKV" secondAttribute="trailing" id="c0p-yy-BVL"/>
+                            <constraint firstItem="xcr-EP-vva" firstAttribute="leading" secondItem="zX1-bj-6fA" secondAttribute="leading" id="cim-dg-ZdD"/>
+                            <constraint firstAttribute="trailing" secondItem="8qp-lV-JgV" secondAttribute="trailing" id="hU9-8q-Jji"/>
+                            <constraint firstItem="SJq-or-KKV" firstAttribute="trailing" secondItem="xcr-EP-vva" secondAttribute="trailing" id="o2W-fH-4Mu"/>
+                            <constraint firstItem="8qp-lV-JgV" firstAttribute="leading" secondItem="SJq-or-KKV" secondAttribute="leading" id="wjq-cz-pbd"/>
+                            <constraint firstItem="8qp-lV-JgV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yal-h7-cN9"/>
+                            <constraint firstItem="xcr-EP-vva" firstAttribute="trailing" secondItem="zX1-bj-6fA" secondAttribute="trailing" id="zNF-qv-IiI"/>
                         </constraints>
                     </view>
                     <connections>
@@ -137,7 +137,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="29.600000000000001" y="36.431784107946029"/>
+            <point key="canvasLocation" x="28" y="35.532233883058474"/>
         </scene>
         <!--CopioneVC-->
         <scene sceneID="PQU-P9-G0s">
